--- a/template/engine.html
+++ b/template/engine.html
@@ -10,9 +10,13 @@
     <section id="play"><button type="button" onclick="doIt('toc')">Let's play</button></section>
   </main>
   <script>
+  var oldHistory = [];
+  var currentPassage = '';
+
+  console.log(oldHistory);
 
   function clear(){
-    console.log('clear');
+    console.log('clear()');
 
     document.getElementById('play').innerHTML = '';
   }
@@ -23,16 +27,46 @@
     document.getElementById('play').innerHTML += '<p>' + str + '</p>';
   }
 
-  function doIt(str){
-    console.log('doIt: ' + str);
+  function getViews(nameOfPassage){
+    // check if not used. if not used set it to current passage.
+    if(!nameOfPassage){
+      nameOfPassage = currentPassage;
+    }
+
+    console.log('getViews(): ' + nameOfPassage);
+
+    if(oldHistory.hasOwnProperty(nameOfPassage) == false){
+      oldHistory[nameOfPassage] = 0;
+    }
+
+    return oldHistory[nameOfPassage];
+  }
+
+  function logHistory(nameOfPassage){
+    console.log('logHistory(): ' + nameOfPassage);
+
+    if(oldHistory.hasOwnProperty(nameOfPassage)){
+      oldHistory[nameOfPassage] += 1;
+    }else{
+      oldHistory[nameOfPassage] = 1;
+    }
+
+    console.log(oldHistory);
+  }
+
+  function doIt(nameOfPassage){
+    console.log('doIt: ' + nameOfPassage);
+    currentPassage = nameOfPassage;
 
     clear();
 
-    switch (str) {
+    switch (nameOfPassage) {
       <contents>
       default:
         console.log('error was here :(.')
     }
+
+    logHistory(nameOfPassage);
   }
   </script>
 </body>
