--- a/template/toc.html
+++ b/template/toc.html
@@ -1,3 +1,3 @@
-<tw-passagedata pid="1" name="toc" tags="">Final Fantasy VII - The Text Adventure
-  
+<tw-passagedata pid="1" name="toc" tags=""><h2>Final Fantasy VII - The Text Adventure</h2>
+
 <contents></tw-passagedata>
